--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -9,7 +9,7 @@ Parameters:
   EksClusterName:
     Type: String
     Description: The name of the EKS cluster created
-    Default: eksworkshop-eksctl
+    Default: eks01
     MinLength: 1
     MaxLength: 100
     ConstraintDescription: You must enter the EKS cluster name
