--- a/whchoi-cluster.yaml
+++ b/whchoi-cluster.yaml
@@ -70,5 +70,5 @@ nodeGroups:
 
 cloudWatch:
     clusterLogging:
-        enableTypes: ["*"]
+        enableTypes: ["api", "audit", "authenticator", "controllerManager", "scheduler"]
 
