file add - CRD for the Secondary-CIDR

--- a/calico_demo/backend-policy.yaml
+++ b/calico_demo/backend-policy.yaml
@@ -9,9 +9,9 @@ spec:
       role: backend
   ingress:
     - from:
-        - <EDIT: UPDATE WITH THE CONFIGURATION NEEDED TO WHITELEST FRONTEND USING PODSELECTOR>
-            <EDIT: UPDATE WITH THE CONFIGURATION NEEDED TO WHITELEST FRONTEND USING PODSELECTOR>
-              <EDIT: UPDATE WITH THE CONFIGURATION NEEDED TO WHITELEST FRONTEND USING PODSELECTOR>
+        - podSelector:
+            matchLabels:
+              role: frontend
       ports:
         - protocol: TCP
           port: 6379
