--- a/alb-controller/2048-deployment.yaml
+++ b/alb-controller/2048-deployment.yaml
@@ -6,16 +6,18 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: "2048"
+      app.kubernetes.io/name: "app-2048"
   replicas: 5
   template:
     metadata:
       labels:
-        app: "2048"
+        app.kubernetes.io/name: "app-2048"
     spec:
       containers:
       - image: alexwhen/docker-2048
         imagePullPolicy: Always
-        name: "2048"
+        name: "app-2048"
         ports:
         - containerPort: 80
+      nodeSelector:
+        nodegroup-type: "frontend-workloads"
