--- a/calico_demo/02-backend.yaml
+++ b/calico_demo/02-backend.yaml
@@ -1,34 +1,36 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend 
+  name: backend 
   namespace: stars
 spec:
   ports:
-  - port: 80 
-    targetPort: 80 
+  - port: 6379
+    targetPort: 6379 
   selector:
-    role: frontend 
+    role: backend 
 ---
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: frontend 
+  name: backend 
   namespace: stars
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        role: frontend 
+        role: backend 
     spec:
       containers:
-      - name: frontend 
+      - name: backend 
         image: calico/star-probe:v0.1.0
         imagePullPolicy: Always
         command:
         - probe
-        - --http-port=80
+        - --http-port=6379
         - --urls=http://frontend.stars:80/status,http://backend.stars:6379/status,http://client.client:9000/status
         ports:
-        - containerPort: 80 
+        - containerPort: 6379
+      nodeSelector:
+        Node-Type: "unmgmd-public"
