--- a/calico_demo/03-frontend.yaml
+++ b/calico_demo/03-frontend.yaml
@@ -1,34 +1,36 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend 
+  name: frontend 
   namespace: stars
 spec:
   ports:
-  - port: 6379
-    targetPort: 6379 
+  - port: 80 
+    targetPort: 80 
   selector:
-    role: backend 
+    role: frontend 
 ---
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: backend 
+  name: frontend 
   namespace: stars
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        role: backend 
+        role: frontend 
     spec:
       containers:
-      - name: backend 
+      - name: frontend 
         image: calico/star-probe:v0.1.0
         imagePullPolicy: Always
         command:
         - probe
-        - --http-port=6379
+        - --http-port=80
         - --urls=http://frontend.stars:80/status,http://backend.stars:6379/status,http://client.client:9000/status
         ports:
-        - containerPort: 6379 
+        - containerPort: 80
+      nodeSelector:
+        Node-Type: "unmgmd-public"
