--- a/EKSVPC3AZ.yml
+++ b/EKSVPC3AZ.yml
@@ -77,17 +77,17 @@ Parameters:
 
   TGWSubnet01Block:
     Type: String
-    Default: 10.11.251.0/20
+    Default: 10.11.251.0/24
     Description: CidrBlock for TGW subnet 01 within the VPC
 
   TGWSubnet02Block:
     Type: String
-    Default: 10.11.252.0/20
+    Default: 10.11.252.0/24
     Description: CidrBlock for TGW subnet 02 within the VPC
   
   TGWSubnet03Block:
     Type: String
-    Default: 10.11.253.0/20
+    Default: 10.11.253.0/24
     Description: CidrBlock for TGW subnet 03 within the VPC
 
 Resources:
@@ -414,6 +414,140 @@ Resources:
       SubnetId: !Ref PrivateSubnet03
       RouteTableId: !Ref PrivateRouteTable03
 
+################################################################################################
+# Add Prviate Routing Table
+################################################################################################
+
+  PrivateRoute01:
+    DependsOn:
+    - VPCGatewayAttachment
+    - NatGateway01
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable01
+      DestinationCidrBlock: 0.0.0.0/0
+      NatGatewayId: !Ref NatGateway01
+
+  PrivateRoute02:
+    DependsOn:
+    - VPCGatewayAttachment
+    - NatGateway02
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable02
+      DestinationCidrBlock: 0.0.0.0/0
+      NatGatewayId: !Ref NatGateway02
+  
+  PrivateRoute03:
+    DependsOn:
+    - VPCGatewayAttachment
+    - NatGateway03
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable03
+      DestinationCidrBlock: 0.0.0.0/0
+      NatGatewayId: !Ref NatGateway03
+########################################################
+# Create-TGW-Subnet: TGWSubnet01,02,03,04
+########################################################
+
+  TGWSubnet01:
+    Type: AWS::EC2::Subnet
+    Metadata:
+      Comment: TGW Subnet 01
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: !Ref TGWSubnet01Block
+      AvailabilityZone: !Ref AvailabilityZoneA
+      Tags:
+      - Key: Name
+        Value: !Sub "${AWS::StackName}-TGWSubnet01"
+      - Key: kubernetes.io/role/internal-elb
+        Value: 1
+
+  TGWSubnet02:
+    Type: AWS::EC2::Subnet
+    Metadata:
+      Comment: TGW Subnet 02
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: !Ref TGWSubnet02Block
+      AvailabilityZone: !Ref AvailabilityZoneB
+      Tags:
+      - Key: Name
+        Value: !Sub "${AWS::StackName}-TGWSubnet02"
+      - Key: kubernetes.io/role/internal-elb
+        Value: 1
+
+  TGWSubnet03:
+    Type: AWS::EC2::Subnet
+    Metadata:
+      Comment: TGW Subnet 03
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: !Ref TGWSubnet03Block
+      AvailabilityZone: !Ref AvailabilityZoneC
+      Tags:
+      - Key: Name
+        Value: !Sub "${AWS::StackName}-TGWSubnet03"
+      - Key: kubernetes.io/role/internal-elb
+        Value: 1
+
+#####################################################################
+# Create-TGW-RouteTable: TGWRT01,02,03,04
+#####################################################################
+  TGWRouteTable01:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+      - Key: Name
+        Value: TGW Subnet AZ1
+      - Key: Network
+        Value: TGWRT01
+
+  TGWRouteTable02:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+      - Key: Name
+        Value: TGW Subnet AZ2
+      - Key: Network
+        Value: TGWRT02
+
+  TGWRouteTable03:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+      - Key: Name
+        Value: TGW Subnet AZ3
+      - Key: Network
+        Value: TGWRT03
+
+       
+################################################################################################
+# Associate-TGW-RouteTable: VPC_TGW_Subnet_a,b Accsociate VPC_TGW_RouteTable #
+################################################################################################
+
+  TGWSubnet01RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref TGWSubnet01
+      RouteTableId: !Ref TGWRouteTable01
+
+  TGWSubnet02RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref TGWSubnet02
+      RouteTableId: !Ref TGWRouteTable02
+
+  TGWSubnet03RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref TGWSubnet03
+      RouteTableId: !Ref TGWRouteTable03
 
 ######################################################################
 # Create-System-Manager-Endpoint: Create VPC SystemManager Endpoint #
