--- a/network-test/node-test-01.yaml
+++ b/network-test/node-test-01.yaml
@@ -7,7 +7,7 @@ metadata:
 #name space change 
   namespace: node-test-01
 spec:
-  replicas: 6
+  replicas: 3
   selector:
     matchLabels:
       app: node-test-01
@@ -17,7 +17,8 @@ spec:
         app: node-test-01
     spec:
       containers:
-      - image: 507115347197.dkr.ecr.ap-northeast-2.amazonaws.com/network-multitool
+#     - image: 507115347197.dkr.ecr.ap-northeast-2.amazonaws.com/network-multitool
+      - image: whchoi98/network-multitool
         imagePullPolicy: Always
         name: node-test-01
         ports:
