--- a/network-test/clb-test-01.yaml
+++ b/network-test/clb-test-01.yaml
@@ -17,7 +17,8 @@ spec:
         app: clb-test-01
     spec:
       containers:
-      - image: 507115347197.dkr.ecr.ap-northeast-2.amazonaws.com/network-multitool
+#     - image: 507115347197.dkr.ecr.ap-northeast-2.amazonaws.com/network-multitool
+      - image: whchoi98/network-multitool
         imagePullPolicy: Always
         name: clb-test-01
         ports:
