--- a/network-test/nlb-test-01.yaml
+++ b/network-test/nlb-test-01.yaml
@@ -17,7 +17,8 @@ spec:
         app: nlb-test-01
     spec:
       containers:
-      - image: 507115347197.dkr.ecr.ap-northeast-2.amazonaws.com/network-multitool
+#     - image: 507115347197.dkr.ecr.ap-northeast-2.amazonaws.com/network-multitool
+      - image: whchoi98/network-multitool
         imagePullPolicy: Always
         name: nlb-test-01
         ports:
